# ROSTurtleCheckers

./: .gitignore  CMakeLists.txt  README.md  package.xml  report_email.config  translations.xml  turtle_checkers_authorization_key.key
include/: CheckersBoardFrame.hpp  CheckersBoardRender.hpp  CheckersConsts.hpp  CheckersGameFrame.hpp  CheckersGameLobby.hpp  CheckersGameMasterNode.hpp  CheckersGameNode.hpp  CheckersGameWindow.hpp  CheckersPlayerNode.hpp  CheckersPlayerWindow.hpp  GameObject.hpp  HUD.hpp  Hasher.hpp  ImageLibrary.hpp  MasterBoard.hpp  RSAKeyGenerator.hpp  Tile.hpp  TileFactory.hpp  TileRender.hpp  TileRenderFactory.hpp  TurtleGraveyard.hpp  TurtlePiece.hpp  TurtlePieceFactory.hpp  TurtlePieceImageLibrary.hpp  TurtlePieceRender.hpp  TurtlePieceRenderFactory.hpp  checkers_board_frame.hpp  checkers_board_node.hpp  checkers_player_node.hpp  turtle.hpp
include/game_master/: CheckersGameLobby.hpp  CheckersGameMasterNode.hpp  DatabaseHandler.hpp  MasterBoard.hpp  TileFactory.hpp  TurtlePieceFactory.hpp
include/player/: ChatBox.hpp  CheckersBoardRender.hpp  CheckersGameFrame.hpp  CheckersMainMenuFrame.hpp  CheckersPlayerNode.hpp  CheckersPlayerWindow.hpp  DialogWidget.hpp  GameWinnerOverlayWidget.hpp  HUD.hpp  ImageLibrary.hpp  LanguageSelectorWidget.hpp  LobbyDetailsWidget.hpp  MatchDetailsWidget.hpp  Parameters.hpp  PlayerIconNameWidget.hpp  StringLibrary.hpp  TileRender.hpp  TileRenderFactory.hpp  TitleWidget.hpp  TranslatedQCheckBox.hpp  TranslatedQComboBox.hpp  TranslatedQLabel.hpp  TranslatedQPushButton.hpp  TurtleGraveyard.hpp  TurtlePieceRender.hpp  TurtlePieceRenderFactory.hpp
include/player/frame/: ChangeAccountPasswordFrame.hpp  CheckersGameFrame.hpp  CheckersMainMenuFrame.hpp  CreateAccountFrame.hpp  CreateLobbyFrame.hpp  GameFrame.hpp  InLobbyFrame.hpp  LobbyListFrame.hpp  LobbyPasswordFrame.hpp  LogInAccountFrame.hpp  LoginAccountFrame.hpp  MainMenuFrame.hpp  StatisticsFrame.hpp  TitleFrame.hpp
include/shared/: CheckersConsts.hpp  ErrorCode.hpp  ErrorCodes.hpp  Hasher.hpp  RSAKeyGenerator.hpp  Tile.hpp  TurtleLogger.hpp  TurtlePiece.hpp
launch/: turtle_checkers_launch.yaml
src/: CheckersBoardFrame.cpp  CheckersBoardRender.cpp  CheckersGameFrame.cpp  CheckersGameLobby.cpp  CheckersGameMasterNode.cpp  CheckersGameNode.cpp  CheckersGameWindow.cpp  CheckersPlayerNode.cpp  CheckersPlayerWindow.cpp  HUD.cpp  ImageLibrary.cpp  MasterBoard.cpp  RSAKeyGenerator.cpp  Tile.cpp  TileFactory.cpp  TileRender.cpp  TileRenderFactory.cpp  TurtleGraveyard.cpp  TurtlePiece.cpp  TurtlePieceFactory.cpp  TurtlePieceImageLibrary.cpp  TurtlePieceRender.cpp  TurtlePieceRenderFactory.cpp  checkers_board_frame.cpp  checkers_board_node.cpp  checkers_game_node.cpp  checkers_player_node.cpp  game_master_node.cpp  game_player_node.cpp  turtle.cpp  turtle_piece.cpp
src/game_master/: CheckersGameLobby.cpp  CheckersGameMasterNode.cpp  DatabaseHandler.cpp  MasterBoard.cpp  TileFactory.cpp  TurtlePieceFactory.cpp
src/player/: ChatBox.cpp  CheckersBoardRender.cpp  CheckersGameFrame.cpp  CheckersMainMenuFrame.cpp  CheckersPlayerNode.cpp  CheckersPlayerWindow.cpp  DialogWidget.cpp  GameWinnerOverlayWidget.cpp  HUD.cpp  ImageLibrary.cpp  LanguageSelectorWidget.cpp  LobbyDetailsWidget.cpp  MatchDetailsWidget.cpp  Parameters.cpp  PlayerIconNameWidget.cpp  StringLibrary.cpp  TileRender.cpp  TileRenderFactory.cpp  TitleWidget.cpp  TranslatedQCheckBox.cpp  TranslatedQComboBox.cpp  TranslatedQLabel.cpp  TranslatedQPushButton.cpp  TurtleGraveyard.cpp  TurtlePieceRender.cpp  TurtlePieceRenderFactory.cpp
src/player/frame/: ChangeAccountPasswordFrame.cpp  CheckersGameFrame.cpp  CheckersMainMenuFrame.cpp  CreateAccountFrame.cpp  CreateLobbyFrame.cpp  GameFrame.cpp  InLobbyFrame.cpp  LobbyListFrame.cpp  LobbyPasswordFrame.cpp  LogInAccountFrame.cpp  LoginAccountFrame.cpp  MainMenuFrame.cpp  StatisticsFrame.cpp  TitleFrame.cpp
src/shared/: ErrorCode.cpp  RSAKeyGenerator.cpp  Tile.cpp  TurtleLogger.cpp  TurtlePiece.cpp
srv/: RequestNextMove.srv  RequestNextPiece.srv
styles/: checkers_style.qss  fonts.qrc
turtle_checkers/: CMakeLists.txt  package.xml
