<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtle_checkers</name>
  <version>0.0.1</version>
  <description>Play a 2-player game of checkers using ROS2</description>
  <maintainer email="CorbinCogswell@gmail.com">Corbin</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>turtle_checkers_interfaces</depend>
</package>